ajout clic sur liste de contacts + tableau

--- a/front/index.html
+++ b/front/index.html
@@ -50,7 +50,9 @@
                     </div>
                 </nav>
 
-                <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-5"></main>
+                <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-5">
+                      <section class="liste"></section>
+                </main>
                 <div class="ajout-contact d-none">
                     <div class="col-md-6">
                         <h2 class="mb-3">Ajout de contact</h2>
