affichage formulaire d'ajout de contact

--- a/front/index.html
+++ b/front/index.html
@@ -49,26 +49,24 @@
                         </ul>
                     </div>
                 </nav>
-
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-5">
                       <section class="liste"></section>
-                </main>
-                <div class="ajout-contact d-none">
-                    <div class="col-md-6">
-                        <h2 class="mb-3">Ajout de contact</h2>
-                        <form action="#" method="post">
-                            <div class="form-group">
-                                <label for="nom">Nom :</label>
-                                <input type="text" class="form-control" name="nom" id="nom" />
-                            </div>
-                            <div class="form-group">
-                                <label for="prenom">Prénom :</label>
-                                <input type="text" class="form-control" name="prenom" id="prenom" />
-                            </div>
-                            <button type="submit" class="btn btn-primary ajout-contact">Ajouter</button>
-                        </form>
+                      <section class="ajout-contact col-md-6">
+                            <h2 class="mb-3">Ajout de contact</h2>
+                            <form action="#" method="post">
+                                <div class="form-group">
+                                    <label for="nom">Nom :</label>
+                                    <input type="text" class="form-control" name="nom" id="nom" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="prenom">Prénom :</label>
+                                    <input type="text" class="form-control" name="prenom" id="prenom" />
+                                </div>
+                                <button type="submit" class="btn btn-primary ajout-contact">Ajouter</button>
+                            </form>
+                        </section>
                     </div>
-                </div>
+                </main>
             </div>
         </div>
 
