corrigé avant tp

--- a/front/index.html
+++ b/front/index.html
@@ -50,22 +50,36 @@
                     </div>
                 </nav>
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-5">
-                      <section class="liste"></section>
-                      <section class="ajout-contact col-md-6">
-                            <h2 class="mb-3">Ajout de contact</h2>
-                            <form action="#" method="post">
-                                <div class="form-group">
-                                    <label for="nom">Nom :</label>
-                                    <input type="text" class="form-control" name="nom" id="nom" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="prenom">Prénom :</label>
-                                    <input type="text" class="form-control" name="prenom" id="prenom" />
-                                </div>
-                                <button type="submit" class="btn btn-primary ajout-contact">Ajouter</button>
-                            </form>
-                        </section>
-                    </div>
+                    <section class="liste"></section>
+                    <section class="ajout-contact col-md-6">
+                        <h2 class="mb-3">Ajout de contact</h2>
+                        <form action="#" method="post">
+                            <div class="form-group">
+                                <label for="nom">Nom :</label>
+                                <input type="text" class="form-control" name="nom" id="nom" />
+                            </div>
+                            <div class="form-group">
+                                <label for="prenom">Prénom :</label>
+                                <input type="text" class="form-control" name="prenom" id="prenom" />
+                            </div>
+                            <button type="submit" class="btn btn-primary ajout-contact">Ajouter</button>
+                        </form>
+                    </section>
+                    <section class="col-md-6 modif-contact">
+                        <h2 class="mb-3">Modfication de contact</h2>
+                        <form>
+                            <div class="form-group">
+                                <label for="nom">Nom :</label>
+                                <input type="text" class="form-control" name="nom" id="nom" />
+                            </div>
+                            <div class="form-group">
+                                <label for="prenom">Prénom :</label>
+                                <input type="text" class="form-control" name="prenom" id="prenom" />
+                            </div>
+                            <button type="submit" class="btn btn-info maj-contact" id="">Modifier</button>
+                            <button type="reset" class="btn btn-danger">Réinitialiser</button>
+                        </form>
+                    </section>
                 </main>
             </div>
         </div>
