--- a/front/index.html
+++ b/front/index.html
@@ -10,8 +10,10 @@
         <title>Admin</title>
     </head>
     <body>
-        <nav class="navbar navbar-dark sticky-top bg-dark d-flex justify-content-start p-0 shadow">
-            <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="index.html">AFPA Calais</a>
+        <nav class="navbar navbar-light sticky-top bg-light d-flex justify-content-start p-0 shadow">
+            <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="https://www.afpa.fr/centre/centre-de-calais" target="_blank">
+                <img src="./images/logo.png" alt="logo" />
+            </a>
             <button
                 class="navbar-toggler position-absolute d-md-none collapsed"
                 type="button"
@@ -23,45 +25,49 @@
             >
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <h1 class="text-light h3 ml-5">Application de gestion des contacts</h1>
+            <h1 class="text-light font-weight-bold h3 ml-5">Application de gestion des contacts</h1>
         </nav>
 
         <div class="container-fluid">
             <div class="row">
                 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                    <div class="sidebar-sticky pt-3 bg-dark text-light">
-                        <ul class="nav flex-column">
+                    <div class="sidebar-sticky pt-3 bg-light text-dark">
+                        <ul class="nav flex-column mt-5">
                             <li class="nav-item">
-                                <a class="nav-link active text-light" href="#" id="tableau">
-                                    <i class="far fa-window-restore"></i>
-                                    Tableau de bord
-                                    <span class="sr-only">(current)</span>
+                                <a class="nav-link active text-light p-3" href="#" id="tableau">
+                                    <h5
+                                        ><i class="far fa-window-restore"></i>
+                                        Tableau de bord
+                                        <span class="sr-only">(current)</span>
+                                    </h5>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="#" id="liste-contacts">
-                                    <i class="fas fa-list-alt"></i>
-                                    Liste des contacts
+                                <a class="nav-link text-light p-3" href="#" id="liste-contacts">
+                                    <h5>
+                                        <i class="fas fa-list-alt"></i>
+                                        Liste des contacts
+                                    </h5>
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" href="#" id="nv-contact">
-                                    <i class="fas fa-plus-circle"></i>
-                                    Nouveau contact
+                                <a class="nav-link text-light p-3" href="#" id="nv-contact">
+                                    <h5>
+                                        <i class="fas fa-plus-circle"></i>
+                                        Nouveau contact
+                                    </h5>
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </nav>
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-3">
-                    <section class="tableau">
-                        
-                    </section>
+                    <section class="tableau"> </section>
 
                     <section class="liste"></section>
                     <div class="d-flex justify-content-around container">
                         <section class="jumbotron ajout-contact p-3 col-md-6 mx-3 my-0">
-                            <h2 class="mb-3">Ajout de contact</h2>
+                            <h2 class="font-weight-bold mb-3">Ajout de contact</h2>
                             <form action="#" method="post">
                                 <div class="form-group">
                                     <label for="nom">Nom :</label>
@@ -84,7 +90,7 @@
                                     <input type="tel" class="form-control" name="phone" id="phone" />
                                 </div>
                                 <div class="form-group">
-                                    <label for="my-input">Catégorie</label>
+                                    <label for="my-input">Catégorie :</label>
                                     <select class="form-control" name="category" id="category">
                                         <option>Famille</option>
                                         <option>Amis</option>
@@ -96,11 +102,20 @@
                                 <button type="reset" class="btn btn-danger w-25">Réinitialiser</button>
                             </form>
                         </section>
-                        <section class="jumbotron ajout-contact p-3 col-md-6 mx-3 my-0"> <p>test</p><br /> </section>
+                        <section class="jumbotron ajout-contact p-3 col-md-6 mx-3 my-0">
+                            <h2 class="font-weight-bold mb-3">Informations</h2>
+                            <h4
+                                >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam architecto vero error quaerat impedit eos incidunt a veritatis. Et vitae illum, quod eum excepturi
+                                iure! Perferendis neque quasi molestiae unde? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum porro facilis molestias minima, est sequi laborum,
+                                aperiam assumenda illum libero architecto expedita ab, harum iste. Voluptas placeat quidem quasi dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio
+                                voluptatum aliquid laborum eos quaerat esse mollitia, labore perferendis culpa sit! Provident, numquam ducimus assumenda quas sed distinctio deserunt expedita
+                                repudiandae! Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4
+                            >
+                        </section>
                     </div>
                     <div class="d-flex justify-content-around container">
                         <section class="jumbotron col-md-6 mx-3 my-0 modif-contact p-3">
-                            <h2 class="mb-3">Modification de contact</h2>
+                            <h2 class="font-weight-bold mb-3">Modification de contact</h2>
                             <form>
                                 <div class="form-group">
                                     <label for="nom">Nom :</label>
@@ -131,12 +146,19 @@
                                         <option>Autres</option>
                                     </select>
                                 </div>
-                                <button type="submit" class="btn btn-info w-25 maj-contact" id="">Modifier</button>
+                                <button type="submit" class="btn btn-success w-25 maj-contact" id="">Modifier</button>
                                 <button type="reset" class="btn btn-danger w-25">Réinitialiser</button>
                             </form>
                         </section>
                         <section class="jumbotron col-md-6 mx-3 my-0 modif-contact p-3">
-                            <p>test</p>
+                            <h2 class="font-weight-bold mb-3">IMPORTANT</h2>
+                            <h4
+                                >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam architecto vero error quaerat impedit eos incidunt a veritatis. Et vitae illum, quod eum excepturi
+                                iure! Perferendis neque quasi molestiae unde? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum porro facilis molestias minima, est sequi laborum,
+                                aperiam assumenda illum libero architecto expedita ab, harum iste. Voluptas placeat quidem quasi dolor. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio
+                                voluptatum aliquid laborum eos quaerat esse mollitia, labore perferendis culpa sit! Provident, numquam ducimus assumenda quas sed distinctio deserunt expedita
+                                repudiandae! Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4
+                            >
                         </section>
                     </div>
                 </main>
