initialisation chart pie

--- a/front/index.html
+++ b/front/index.html
@@ -64,6 +64,10 @@
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 p-md-3">
                     <section class="tableau"> </section>
 
+
+                    <canvas id="graph"></canvas>
+
+
                     <section class="liste"></section>
                     <div class="d-flex justify-content-around container">
                         <section class="jumbotron ajout-contact p-3 col-md-6 mx-3 my-0">
@@ -168,6 +172,7 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/all.min.js"></script>
+        <script src="../node_modules/chart.js/dist/chart.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
